@@ -1,7 +1,6 @@
 package com.itemis.fluffyj.memory;
 
 import static java.util.Objects.requireNonNull;
-import static jdk.incubator.foreign.ResourceScope.globalScope;
 
 import com.itemis.fluffyj.memory.api.FluffyPointer;
 import com.itemis.fluffyj.memory.api.FluffyScalarPointer;
@@ -12,8 +11,8 @@ import com.itemis.fluffyj.memory.internal.PointerOfInt;
 import com.itemis.fluffyj.memory.internal.PointerOfLong;
 import com.itemis.fluffyj.memory.internal.PointerOfString;
 
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.MemorySession;
 
 /**
  * Helps with allocating pointers to off heap memory areas.
@@ -47,37 +46,38 @@ public final class FluffyMemoryScalarPointerAllocator<T> {
     }
 
     /**
-     * Allocate the pointer. Its scope will be the global scope.
+     * Allocate the pointer. Its session will be the global session.
      *
      * @return A new {@link FluffyPointer} instance.
      */
     public FluffyScalarPointer<T> allocate() {
-        return allocate(globalScope());
+        return allocate(MemorySession.global());
     }
 
     /**
-     * Allocate the pointer and attach it to the provided {@code scope}.
+     * Allocate the pointer and attach it to the provided {@code session}.
      *
-     * @param scope - {@link ResourceScope} of the pointer.
+     * @param session - {@link MemorySession} of the pointer.
      * @return A new {@link FluffyPointer} instance.
      */
     // The cast is indeed unsafe but it won't produce any ClassCastExceptions since the value the
     // pointer points to will be interpreted as T which may be false but does not cause any error.
     @SuppressWarnings("unchecked")
-    public FluffyScalarPointer<T> allocate(ResourceScope scope) {
-        requireNonNull(scope, "scope");
+    public FluffyScalarPointer<T> allocate(MemorySession session) {
+        requireNonNull(session, "session");
 
         Object result = null;
         if (type.isAssignableFrom(Long.class)) {
-            result = new PointerOfLong(initialValue, scope);
+            result = new PointerOfLong(initialValue, session);
         } else if (type.isAssignableFrom(Integer.class)) {
-            result = new PointerOfInt(initialValue, scope);
+            result = new PointerOfInt(initialValue, session);
         } else if (type.isAssignableFrom(String.class)) {
-            result = new PointerOfString(initialValue, scope);
+            result = new PointerOfString(initialValue, session);
         } else if (type.isAssignableFrom(Byte.class)) {
-            result = new PointerOfByte(initialValue, scope);
+            result = new PointerOfByte(initialValue, session);
         } else {
-            throw new FluffyMemoryException("Cannot allocate scalar pointer of unknown type: " + type.getCanonicalName());
+            throw new FluffyMemoryException(
+                "Cannot allocate scalar pointer of unknown type: " + type.getCanonicalName());
         }
 
         return (FluffyScalarPointer<T>) result;
