@@ -3,8 +3,8 @@ package com.itemis.fluffyj.memory;
 import static com.itemis.fluffyj.tests.FluffyTestHelper.assertFinal;
 import static com.itemis.fluffyj.tests.FluffyTestHelper.assertIsStaticHelper;
 import static com.itemis.fluffyj.tests.FluffyTestHelper.assertNullArgNotAccepted;
-import static jdk.incubator.foreign.MemoryAddress.NULL;
-import static jdk.incubator.foreign.ResourceScope.globalScope;
+import static java.lang.foreign.MemoryAddress.NULL;
+import static java.lang.foreign.MemorySession.global;
 
 import com.itemis.fluffyj.memory.FluffyMemoryPointerBuilder.FluffyMemoryTypedPointerBuilder;
 import com.itemis.fluffyj.memory.api.FluffyScalarSegment;
@@ -17,7 +17,7 @@ import com.itemis.fluffyj.memory.internal.PointerOfString;
 
 import org.junit.jupiter.api.Test;
 
-import jdk.incubator.foreign.MemoryAddress;
+import java.lang.foreign.MemoryAddress;
 
 class ClassBasicsTest {
 
@@ -43,25 +43,29 @@ class ClassBasicsTest {
 
     @Test
     void constructor_with_null_arg_yields_npe() {
-        assertNullArgNotAccepted(() -> new FluffyMemoryScalarPointerAllocator<>((FluffyScalarSegment<?>) null), "toHere");
-        assertNullArgNotAccepted(() -> new FluffyMemoryScalarPointerAllocator<>((MemoryAddress) null, Object.class), "address");
+        assertNullArgNotAccepted(() -> new FluffyMemoryScalarPointerAllocator<>((FluffyScalarSegment<?>) null),
+            "toHere");
+        assertNullArgNotAccepted(() -> new FluffyMemoryScalarPointerAllocator<>((MemoryAddress) null, Object.class),
+            "address");
         assertNullArgNotAccepted(() -> new FluffyMemoryScalarPointerAllocator<>(NULL, null), "typeOfData");
-        assertNullArgNotAccepted(() -> new FluffyMemoryVectorPointerAllocator<>((FluffyVectorSegment<?>) null), "toHere");
-        assertNullArgNotAccepted(() -> new FluffyMemoryVectorPointerAllocator<>((MemoryAddress) null, A_LONG, Object[].class), "address");
+        assertNullArgNotAccepted(() -> new FluffyMemoryVectorPointerAllocator<>((FluffyVectorSegment<?>) null),
+            "toHere");
+        assertNullArgNotAccepted(
+            () -> new FluffyMemoryVectorPointerAllocator<>((MemoryAddress) null, A_LONG, Object[].class), "address");
         assertNullArgNotAccepted(() -> new FluffyMemoryVectorPointerAllocator<>(NULL, A_LONG, null), "typeOfData");
         assertNullArgNotAccepted(() -> new FluffyMemoryTypedPointerBuilder(null), "address");
         assertNullArgNotAccepted(() -> new FluffyMemoryScalarSegmentAllocator<>(null), "initialValue");
         assertNullArgNotAccepted(() -> new FluffyMemoryVectorSegmentAllocator<>(null), "initialValue");
         assertNullArgNotAccepted(() -> new FluffyMemorySegmentWrapper(null), "nativeSegment");
-        assertNullArgNotAccepted(() -> new PointerOfInt(null, globalScope()) {}, "addressPointedTo");
-        assertNullArgNotAccepted(() -> new PointerOfInt(NULL, null) {}, "scope");
-        assertNullArgNotAccepted(() -> new PointerOfLong(null, globalScope()) {}, "addressPointedTo");
-        assertNullArgNotAccepted(() -> new PointerOfLong(NULL, null) {}, "scope");
-        assertNullArgNotAccepted(() -> new PointerOfBlob(null, A_LONG, globalScope()) {}, "addressPointedTo");
-        assertNullArgNotAccepted(() -> new PointerOfBlob(NULL, A_LONG, null) {}, "scope");
-        assertNullArgNotAccepted(() -> new PointerOfString(null, globalScope()) {}, "addressPointedTo");
-        assertNullArgNotAccepted(() -> new PointerOfString(NULL, null) {}, "scope");
-        assertNullArgNotAccepted(() -> new PointerOfByte(null, globalScope()) {}, "addressPointedTo");
-        assertNullArgNotAccepted(() -> new PointerOfByte(NULL, null) {}, "scope");
+        assertNullArgNotAccepted(() -> new PointerOfInt(null, global()) {}, "addressPointedTo");
+        assertNullArgNotAccepted(() -> new PointerOfInt(NULL, null) {}, "session");
+        assertNullArgNotAccepted(() -> new PointerOfLong(null, global()) {}, "addressPointedTo");
+        assertNullArgNotAccepted(() -> new PointerOfLong(NULL, null) {}, "session");
+        assertNullArgNotAccepted(() -> new PointerOfBlob(null, A_LONG, global()) {}, "addressPointedTo");
+        assertNullArgNotAccepted(() -> new PointerOfBlob(NULL, A_LONG, null) {}, "session");
+        assertNullArgNotAccepted(() -> new PointerOfString(null, global()) {}, "addressPointedTo");
+        assertNullArgNotAccepted(() -> new PointerOfString(NULL, null) {}, "session");
+        assertNullArgNotAccepted(() -> new PointerOfByte(null, global()) {}, "addressPointedTo");
+        assertNullArgNotAccepted(() -> new PointerOfByte(NULL, null) {}, "session");
     }
 }
