@@ -1,14 +1,14 @@
 package com.itemis.fluffyj.memory;
 
-import static jdk.incubator.foreign.MemoryLayout.sequenceLayout;
-import static jdk.incubator.foreign.MemoryLayouts.JAVA_BYTE;
+import static java.lang.foreign.MemoryLayout.sequenceLayout;
 import static org.apache.commons.lang3.RandomStringUtils.randomAlphanumeric;
 
 import com.itemis.fluffyj.memory.tests.FluffyMemoryScalarTestValue;
 import com.itemis.fluffyj.memory.tests.FluffyScalarDataManipulationTest;
 
-import jdk.incubator.foreign.CLinker;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.MemorySession;
+import java.lang.foreign.SegmentAllocator;
+import java.lang.foreign.ValueLayout;
 
 public class StringManipulationTest extends FluffyScalarDataManipulationTest<String> {
 
@@ -19,11 +19,11 @@ public class StringManipulationTest extends FluffyScalarDataManipulationTest<Str
             @Override
             public FluffyMemoryScalarTestValue<String> next() {
                 var typedValue = randomAlphanumeric(RND_STR_LENGTH);
-                var cString = CLinker.toCString(typedValue, ResourceScope.globalScope());
+                var cString = SegmentAllocator.newNativeArena(MemorySession.global()).allocateUtf8String(typedValue);
                 var rawValue = new byte[(int) cString.byteSize()];
                 cString.asByteBuffer().get(rawValue);
                 return new FluffyMemoryScalarTestValue<>(typedValue, rawValue);
             }
-        }, sequenceLayout(RND_STR_LENGTH + 1, JAVA_BYTE));
+        }, sequenceLayout(RND_STR_LENGTH + 1, ValueLayout.JAVA_BYTE));
     }
 }
